Fixed up password setting in state and controller.community. stretched profile header background.

--- a/libsrc/scss/community.scss
+++ b/libsrc/scss/community.scss
@@ -58,6 +58,7 @@
     .background {
         z-index: 0;
         position: absolute; top: 0; left: 0;
+        background-size: 100%;
         height: 300px;
         width: 100%;
     }
